recursion.logo.lessons.recursion.logo.spiral.Spiral.scala.error
Spiral:4: error: reassignment to val
  spiral=spiral+increment
        ^